...
            <point key="canvasLocation" x="-654.19847328244271" y="736.61971830985919"/>
        </scene>
        <!--Add-->
        <scene sceneID="TXP-Kv-MEV">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rot-Nz-QA2" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Add" image="plus.app.fill" catalog="system" selectedImage="plus.app" id="afi-xh-6fm"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Hdc-hd-fMz">
                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
